@@ -2,10 +2,7 @@ package com.gradle.superscalarsim.blocks;
 
 import com.gradle.superscalarsim.blocks.arithmetic.ArithmeticFunctionUnitBlock;
 import com.gradle.superscalarsim.blocks.base.*;
-import com.gradle.superscalarsim.blocks.branch.BranchFunctionUnitBlock;
-import com.gradle.superscalarsim.blocks.branch.BranchTargetBuffer;
-import com.gradle.superscalarsim.blocks.branch.GShareUnit;
-import com.gradle.superscalarsim.blocks.branch.GlobalHistoryRegister;
+import com.gradle.superscalarsim.blocks.branch.*;
 import com.gradle.superscalarsim.blocks.loadstore.*;
 import com.gradle.superscalarsim.builders.RegisterFileModelBuilder;
 import com.gradle.superscalarsim.code.*;
@@ -13,8 +10,11 @@ import com.gradle.superscalarsim.cpu.*;
 import com.gradle.superscalarsim.enums.DataTypeEnum;
 import com.gradle.superscalarsim.enums.RegisterReadinessEnum;
 import com.gradle.superscalarsim.enums.RegisterTypeEnum;
-import com.gradle.superscalarsim.loader.InitLoader;
+import com.gradle.superscalarsim.loader.DynamicDataProvider;
+import com.gradle.superscalarsim.loader.IDataProvider;
+import com.gradle.superscalarsim.loader.StaticDataProvider;
 import com.gradle.superscalarsim.models.FunctionalUnitDescription;
+import com.gradle.superscalarsim.models.register.RegisterFile;
 import com.gradle.superscalarsim.models.register.RegisterFileModel;
 import com.gradle.superscalarsim.models.register.RegisterModel;
 import org.junit.Assert;
@@ -23,13 +23,16 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+
+import static com.gradle.superscalarsim.blocks.branch.BitPredictor.WEAKLY_TAKEN;
 
 public class ForwardSimulationTest
 {
   // Use this to step the sim
   Cpu cpu;
   
-  InitLoader initLoader;
+  IDataProvider staticDataProvider;
   
   InstructionMemoryBlock instructionMemoryBlock;
   private SimulationStatistics simulationStatistics;
@@ -45,12 +48,12 @@ public class ForwardSimulationTest
   private IssueWindowBlock aluIssueWindowBlock;
   private ArithmeticFunctionUnitBlock addFunctionBlock;
   private ArithmeticFunctionUnitBlock addSecondFunctionBlock;
-  private ArithmeticFunctionUnitBlock subFunctionBlock;
+  private ArithmeticFunctionUnitBlock mulFunctionBlock;
   
   private IssueWindowBlock fpIssueWindowBlock;
   private ArithmeticFunctionUnitBlock faddFunctionBlock;
   private ArithmeticFunctionUnitBlock faddSecondFunctionBlock;
-  private ArithmeticFunctionUnitBlock fsubFunctionBlock;
+  private ArithmeticFunctionUnitBlock fmulFunctionBlock;
   
   private IssueWindowBlock branchIssueWindowBlock;
   private BranchFunctionUnitBlock branchFunctionUnitBlock1;
@@ -100,16 +103,16 @@ public class ForwardSimulationTest
             .hasRegisterList(Arrays.asList(float1, float2, float3, float4, float5)).build();
     
     CpuConfig cpuCfg = new CpuConfig();
-    cpuCfg.robSize           = 256;
-    cpuCfg.lbSize            = 64;
-    cpuCfg.sbSize            = 64;
-    cpuCfg.fetchWidth        = 3;
-    cpuCfg.branchFollowLimit = 1;
-    cpuCfg.commitWidth       = 4;
-    cpuCfg.btbSize           = 1024;
-    cpuCfg.phtSize           = 10;
-    cpuCfg.predictorType     = "2bit";
-    cpuCfg.predictorDefault  = "Weakly Taken";
+    cpuCfg.robSize               = 256;
+    cpuCfg.lbSize                = 64;
+    cpuCfg.sbSize                = 64;
+    cpuCfg.fetchWidth            = 3;
+    cpuCfg.branchFollowLimit     = 1;
+    cpuCfg.commitWidth           = 4;
+    cpuCfg.btbSize               = 1024;
+    cpuCfg.phtSize               = 10;
+    cpuCfg.predictorType         = BitPredictor.PredictorType.TWO_BIT_PREDICTOR;
+    cpuCfg.predictorDefaultState = WEAKLY_TAKEN;// "Weakly Taken";
     // cache
     cpuCfg.useCache             = true;
     cpuCfg.cacheLines           = 16;
@@ -124,7 +127,7 @@ public class ForwardSimulationTest
     cpuCfg.speculativeRegisters = 320;
     cpuCfg.callStackSize        = 512;
     // 3 FX: +, +, - (delay 2)
-    // 3 FP: +, +, - (delay 2)
+    // 3 FP: +, +, * (delay 2)
     // 1 L/S: (delay 1)
     // 2 branch: (delay 3)
     // 1 mem: (delay 1)
@@ -135,7 +138,7 @@ public class ForwardSimulationTest
                                                   FunctionalUnitDescription.CapabilityName.addition, 2)), "FX"),
                                   new FunctionalUnitDescription(2, FunctionalUnitDescription.Type.FX, Arrays.asList(
                                           new FunctionalUnitDescription.Capability(
-                                                  FunctionalUnitDescription.CapabilityName.addition, 2)), "FX"),
+                                                  FunctionalUnitDescription.CapabilityName.multiplication, 2)), "FX"),
                                   new FunctionalUnitDescription(3, FunctionalUnitDescription.Type.FP, Arrays.asList(
                                           new FunctionalUnitDescription.Capability(
                                                   FunctionalUnitDescription.CapabilityName.addition, 2)), "FP"),
@@ -144,17 +147,19 @@ public class ForwardSimulationTest
                                                   FunctionalUnitDescription.CapabilityName.addition, 2)), "FP"),
                                   new FunctionalUnitDescription(5, FunctionalUnitDescription.Type.FP, Arrays.asList(
                                           new FunctionalUnitDescription.Capability(
-                                                  FunctionalUnitDescription.CapabilityName.addition, 2)), "FP"),
+                                                  FunctionalUnitDescription.CapabilityName.multiplication, 2)), "FP"),
                                   new FunctionalUnitDescription(6, FunctionalUnitDescription.Type.L_S, 1, "L/S"),
                                   new FunctionalUnitDescription(7, FunctionalUnitDescription.Type.Branch, 3, "Branch"),
                                   new FunctionalUnitDescription(8, FunctionalUnitDescription.Type.Branch, 3, "Branch"),
                                   new FunctionalUnitDescription(9, FunctionalUnitDescription.Type.Memory, 1, "Mem"));
     
     
-    SimulationConfig cfg = new SimulationConfig("", new ArrayList<>(), cpuCfg);
+    SimulationConfig cfg = new SimulationConfig("", new ArrayList<>(), cpuCfg, 0);
     
-    this.initLoader = new InitLoader(Arrays.asList(integerFile, floatFile), new ArrayList<>());
-    this.cpu        = new Cpu(cfg, null, initLoader);
+    RegisterFile registerFile = new RegisterFile(Arrays.asList(integerFile, floatFile), List.of());
+    this.staticDataProvider = new DynamicDataProvider(registerFile,
+                                                      new StaticDataProvider().getInstructionFunctionModels());
+    this.cpu                = new Cpu(cfg, null, staticDataProvider);
     CpuState cpuState = this.cpu.cpuState;
     // Fix the statistics - nothing gets allocated
     cpuState.statistics.allocateInstructionStats(50);
@@ -183,20 +188,14 @@ public class ForwardSimulationTest
     this.cache                     = cpuState.cache;
     
     // FU
-    this.addFunctionBlock = cpuState.arithmeticFunctionUnitBlocks.get(0);
-    // Remove subtract
-    addFunctionBlock.getAllowedOperators().remove("-");
+    this.addFunctionBlock       = cpuState.arithmeticFunctionUnitBlocks.get(0);
     this.addSecondFunctionBlock = cpuState.arithmeticFunctionUnitBlocks.get(1);
-    // Remove subtract
-    addSecondFunctionBlock.getAllowedOperators().remove("-");
-    this.subFunctionBlock  = cpuState.arithmeticFunctionUnitBlocks.get(2);
-    this.faddFunctionBlock = cpuState.fpFunctionUnitBlocks.get(0);
-    // Remove subtract
-    faddFunctionBlock.getAllowedOperators().remove("-");
+    this.mulFunctionBlock       = cpuState.arithmeticFunctionUnitBlocks.get(2);
+    
+    this.faddFunctionBlock       = cpuState.fpFunctionUnitBlocks.get(0);
     this.faddSecondFunctionBlock = cpuState.fpFunctionUnitBlocks.get(1);
-    // Remove subtract
-    faddSecondFunctionBlock.getAllowedOperators().remove("-");
-    this.fsubFunctionBlock        = cpuState.fpFunctionUnitBlocks.get(2);
+    this.fmulFunctionBlock       = cpuState.fpFunctionUnitBlocks.get(2);
+    
     this.loadStoreFunctionUnit    = cpuState.loadStoreFunctionUnits.get(0);
     this.memoryAccessUnit         = cpuState.memoryAccessUnits.get(0);
     this.branchFunctionUnitBlock1 = cpuState.branchFunctionUnitBlocks.get(0);
@@ -214,7 +213,7 @@ public class ForwardSimulationTest
   public void simulate_oneIntInstruction_finishesAfterSevenTicks()
   {
     
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  add x1,x2,x3
                                  """);
@@ -277,7 +276,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_threeIntRawInstructions_finishesAfterElevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  add x3,x4,x5
                                  add x2,x3,x4
@@ -420,17 +419,18 @@ public class ForwardSimulationTest
   @Test
   public void simulate_intOneRawConflict_usesFullPotentialOfTheProcessor()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
-                                 sub x5,x4,x5
+                                 mul x5,x4,x5
                                  add x2,x3,x4
                                  add x1,x2,x3
                                  add x4,x4,x3
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
     
+    // Fetch 3
     this.cpu.step();
-    Assert.assertEquals("sub", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
+    Assert.assertEquals("mul", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("add", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("add", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -438,9 +438,10 @@ public class ForwardSimulationTest
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Fetch last, rename 3
     this.cpu.step();
     Assert.assertEquals("add", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals("sub tg0,x4,x5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
     Assert.assertEquals("add tg2,tg1,x3", this.decodeAndDispatchBlock.getCodeBuffer().get(2).getRenamedCodeLine());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -451,56 +452,42 @@ public class ForwardSimulationTest
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Issue the three, decode the last
     this.cpu.step();
     Assert.assertEquals(3, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("add tg3,x4,x3", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("sub tg0,x4,x5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.aluIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(2).getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // The [0] or [1] can be executed, [0] is chosen (no particular reason), removed from the issue window
+    // Also the last instruction made it to issue window
     this.cpu.step();
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("add tg3,x4,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
-    Assert.assertEquals("sub tg0,x4,x5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // 2 FUs busy, last adder did not have anything to work on
+    Assert.assertEquals("mul tg0,x4,x5", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // The last instruction is executed by addSecondFunctionBlock
+    // One instruction waits for the tg1 to finish
     this.cpu.step();
     Assert.assertEquals("add tg2,tg1,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    // 3 FUs busy
     Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("sub tg0,x4,x5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x5", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("add tg1,x3,x4", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // First two computed
     this.cpu.step();
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
-    Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // addFunctionBlock starts work on the last instruction immediately
     Assert.assertEquals("add tg2,tg1,x3", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("add tg3,x4,x3", this.addSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    // tg0 done, tg1 done
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("tg1").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -512,19 +499,17 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
     this.cpu.step();
+    // The first two instructions are committed
     Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
+    // Last one is done, but the #3 (id 2) is still computing in addFunctionBlock
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertEquals("add tg2,tg1,x3", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(-2, (int) this.unifiedRegisterFileBlock.getRegister("x5").getValue(DataTypeEnum.kInt), 0.01);
+    // Registers
+    Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x5").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("x2").getValue(DataTypeEnum.kInt), 0.01);
-    Assert.assertEquals(RegisterReadinessEnum.kExecuted,
-                        this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kAllocated,
-                        this.unifiedRegisterFileBlock.getRegister("tg2").getReadiness());
-    Assert.assertEquals(RegisterReadinessEnum.kExecuted,
-                        this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // Head of ROB is committable
     this.cpu.step();
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(2).isReadyToBeCommitted());
@@ -536,6 +521,7 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg1").getReadiness());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
+    // And committed
     this.cpu.step();
     Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals(4, (int) this.unifiedRegisterFileBlock.getRegister("x2").getValue(DataTypeEnum.kInt), 0.01);
@@ -545,7 +531,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_oneFloatInstruction_finishesAfterSevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  fadd.s f1,f2,f3
                                  """);
@@ -611,7 +597,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_threeFloatRawInstructions_finishesAfterElevenTicks()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  fadd.s f3,f4,f5
                                  fadd.s f2,f3,f4
@@ -765,9 +751,9 @@ public class ForwardSimulationTest
   @Test
   public void simulate_floatOneRawConflict_usesFullPotentialOfTheProcessor()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
-                                 fsub.s f5,f4,f5
+                                 fmul.s f5,f4,f5
                                  fadd.s f2,f3,f4
                                  fadd.s f1,f2,f3
                                  fadd.s f4,f4,f3
@@ -775,7 +761,7 @@ public class ForwardSimulationTest
     instructionMemoryBlock.setCode(codeParser.getInstructions());
     
     this.cpu.step();
-    Assert.assertEquals("fsub.s", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
+    Assert.assertEquals("fmul.s", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("fadd.s", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("fadd.s", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -785,7 +771,7 @@ public class ForwardSimulationTest
     
     this.cpu.step();
     Assert.assertEquals("fadd.s", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals("fsub.s tg0,f4,f5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
+    Assert.assertEquals("fmul.s tg0,f4,f5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg1,f3,f4", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg2,tg1,f3", this.decodeAndDispatchBlock.getCodeBuffer().get(2).getRenamedCodeLine());
     Assert.assertEquals(RegisterReadinessEnum.kFree, this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -799,7 +785,7 @@ public class ForwardSimulationTest
     this.cpu.step();
     Assert.assertEquals(3, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("fadd.s tg3,f4,f3", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("fsub.s tg0,f4,f5",
+    Assert.assertEquals("fmul.s tg0,f4,f5",
                         this.fpIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg1,f3,f4",
                         this.fpIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
@@ -815,12 +801,13 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
     this.cpu.step();
+    // 2 left in issue, 2 executing
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals("fadd.s tg2,tg1,f3",
                         this.fpIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg3,f4,f3",
                         this.fpIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
-    Assert.assertEquals("fsub.s tg0,f4,f5", this.fsubFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("fmul.s tg0,f4,f5", this.fmulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg1,f3,f4", this.faddFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -832,10 +819,11 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
     this.cpu.step();
+    // second clock of execution. Last started also, only tg2 is waiting
     Assert.assertEquals("fadd.s tg2,tg1,f3",
                         this.fpIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg3,f4,f3", this.faddSecondFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("fsub.s tg0,f4,f5", this.fsubFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("fmul.s tg0,f4,f5", this.fmulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("fadd.s tg1,f3,f4", this.faddFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(RegisterReadinessEnum.kAllocated,
                         this.unifiedRegisterFileBlock.getRegister("tg3").getReadiness());
@@ -847,6 +835,7 @@ public class ForwardSimulationTest
                         this.unifiedRegisterFileBlock.getRegister("tg0").getReadiness());
     
     this.cpu.step();
+    // 0, 1 ready, 2 can be executed, 3 executing
     Assert.assertEquals(4, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
@@ -867,7 +856,7 @@ public class ForwardSimulationTest
     Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertEquals("fadd.s tg2,tg1,f3", this.faddFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(12.24, (float) this.unifiedRegisterFileBlock.getRegister("f5").getValue(DataTypeEnum.kFloat),
+    Assert.assertEquals(0.1224, (float) this.unifiedRegisterFileBlock.getRegister("f5").getValue(DataTypeEnum.kFloat),
                         0.001);
     Assert.assertEquals(15.375, (float) this.unifiedRegisterFileBlock.getRegister("f2").getValue(DataTypeEnum.kFloat),
                         0.001);
@@ -901,7 +890,7 @@ public class ForwardSimulationTest
   @Test
   public void simulate_jumpFromLabelToLabel_recordToBTB()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   jal x0,lab3
                                  lab1:
@@ -913,7 +902,7 @@ public class ForwardSimulationTest
                                  labFinal:
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     
     this.cpu.step();
     Assert.assertEquals("jal", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -926,7 +915,8 @@ public class ForwardSimulationTest
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals(1, this.decodeAndDispatchBlock.getCodeBuffer().size());
     Assert.assertEquals("jal tg0,lab3", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals(1, this.globalHistoryRegister.getRegisterValueAsInt());
+    // No conditionals, so no history
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
     
     this.cpu.step();
     Assert.assertEquals("jal", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -937,7 +927,7 @@ public class ForwardSimulationTest
     Assert.assertEquals(1, this.branchIssueWindowBlock.getIssuedInstructions().size());
     Assert.assertEquals("jal tg0,lab3",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals(3, this.globalHistoryRegister.getRegisterValueAsInt());
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
     
     this.cpu.step();
     Assert.assertEquals("jal", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -949,7 +939,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,lab2",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("jal tg0,lab3", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(7, this.globalHistoryRegister.getRegisterValueAsInt());
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
     
     this.cpu.step();
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -962,7 +952,7 @@ public class ForwardSimulationTest
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("jal tg0,lab3", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("jal tg1,lab2", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(15, this.globalHistoryRegister.getRegisterValueAsInt());
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
     
     this.cpu.step();
     Assert.assertEquals(0, this.decodeAndDispatchBlock.getCodeBuffer().size());
@@ -991,8 +981,6 @@ public class ForwardSimulationTest
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     Assert.assertEquals(12, this.branchTargetBuffer.getEntryTarget(0));
     Assert.assertTrue(this.branchTargetBuffer.isEntryUnconditional(0));
-    // TODO: this value has been modified until GHR is revised
-    Assert.assertEquals(0, this.globalHistoryRegister.getHistoryValueAsInt(0));
     
     this.cpu.step();
     Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
@@ -1000,7 +988,6 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg3,labFinal", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(8, this.branchTargetBuffer.getEntryTarget(12));
     Assert.assertTrue(this.branchTargetBuffer.isEntryUnconditional(12));
-    Assert.assertEquals(1, this.globalHistoryRegister.getHistoryValueAsInt(3));
     
     this.cpu.step();
     Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
@@ -1015,20 +1002,18 @@ public class ForwardSimulationTest
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(9).isReadyToBeCommitted());
     Assert.assertEquals(4, this.branchTargetBuffer.getEntryTarget(8));
     Assert.assertTrue(this.branchTargetBuffer.isEntryUnconditional(8));
-    Assert.assertEquals(3, this.globalHistoryRegister.getHistoryValueAsInt(6));
     
     this.cpu.step();
     Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals(16, this.branchTargetBuffer.getEntryTarget(4));
     Assert.assertTrue(this.branchTargetBuffer.isEntryUnconditional(8));
-    Assert.assertEquals(7, this.globalHistoryRegister.getHistoryValueAsInt(9));
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt));
   }
   
   @Test
   public void simulate_wellDesignedLoop_oneMisfetch()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   loop:
                                     beq x3,x0,loopEnd
@@ -1037,7 +1022,11 @@ public class ForwardSimulationTest
                                   loopEnd:
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
+    // What should happen:
+    // The first iteration beq cannot be taken (no target)
+    // The predictor is weakly taken, so the second iteration it will be weakly not taken
+    // x3 is 6 so 6 iterations will be executed
     
     // First fetch (3)
     this.cpu.step();
@@ -1085,7 +1074,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,loop",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg0,x3,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     
     this.cpu.step();
@@ -1098,7 +1087,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("subi tg2,tg0,1", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg0,x3,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     
     this.cpu.step();
@@ -1114,7 +1103,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
     // There is a new instruction in the function block
-    Assert.assertEquals("subi tg2,tg0,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg2,tg0,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     
@@ -1124,7 +1113,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg0,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg2,tg0,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg2,tg0,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     // beq (id 1), subi (id 2) and jal (id 3) are ready
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
@@ -1137,7 +1126,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals("jal tg3,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg0,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg4,tg2,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg4,tg2,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
     
@@ -1148,13 +1137,13 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg3,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     // beq is ID 6
     Assert.assertEquals("beq tg0,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg4,tg2,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg4,tg2,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     
     this.cpu.step();
     Assert.assertEquals("jal tg3,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg2,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg6,tg4,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg6,tg4,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(6).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(7).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(9).isReadyToBeCommitted());
@@ -1162,96 +1151,96 @@ public class ForwardSimulationTest
     this.cpu.step();
     Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg2,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg6,tg4,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg6,tg4,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(9).isReadyToBeCommitted());
     
     this.cpu.step();
     Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg2,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg8,tg6,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg7,tg6,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals(0, (int) this.unifiedRegisterFileBlock.getRegister("x0").getValue(DataTypeEnum.kInt), 0.01);
     
     this.cpu.step();
     Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg4,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg8,tg6,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg7,tg6,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(12).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(13).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(15).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg7,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg4,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg10,tg8,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg3,tg7,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(15).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg7,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg4,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg10,tg8,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg3,tg7,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg7,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg1,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg6,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg12,tg10,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg2,tg3,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(18).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(19).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(21).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg9,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg0,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg6,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg12,tg10,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg2,tg3,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(21).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg9,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg0,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq tg6,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg14,tg12,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg9,tg2,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg9,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg8,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg14,tg12,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg0,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg7,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg9,tg2,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(24).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(25).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(27).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg11,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg8,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg16,tg14,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg8,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg7,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg1,tg9,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(27).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg11,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg8,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg16,tg14,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg8,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg7,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg1,tg9,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg11,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg10,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg18,tg16,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg8,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg6,tg1,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(30).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(31).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(33).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg13,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg10,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg18,tg16,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg6,tg1,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(33).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg13,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg10,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg20,tg18,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg3,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg11,tg6,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("jal tg13,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("beq tg12,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg20,tg18,1", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("jal tg5,loop", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("beq tg2,x0,loopEnd", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("subi tg11,tg6,1", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(36).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(37).isReadyToBeCommitted());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(39).isReadyToBeCommitted());
@@ -1259,7 +1248,7 @@ public class ForwardSimulationTest
     this.cpu.step();
     Assert.assertNull(this.branchFunctionUnitBlock2.getSimCodeModel());
     Assert.assertNull(this.branchFunctionUnitBlock1.getSimCodeModel());
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.addFunctionBlock.getSimCodeModel());
     Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
     Assert.assertEquals(0, this.aluIssueWindowBlock.getIssuedInstructions().size());
     Assert.assertEquals(0, this.branchIssueWindowBlock.getIssuedInstructions().size());
@@ -1269,35 +1258,39 @@ public class ForwardSimulationTest
   @Test
   public void simulate_ifElse_executeFirstFragment()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   beq x5,x0,labelIf
-                                  subi x1,x1,10
+                                  mul x1,x1,x2
                                   jal x0,labelFin
                                  labelIf:
                                   addi x1,x1,10
                                  labelFin:
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
+    
+    // x5 id zero in the beginning, so the first conditional is taken
     
     // First fetch
     this.cpu.step();
     Assert.assertEquals(8, this.instructionFetchBlock.getPc());
     Assert.assertEquals("beq", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals("subi", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
+    Assert.assertEquals("mul", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     // Third instruction is not fetched - it is a second branch
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
     
     // Second fetch
     this.cpu.step();
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue()); // Not taken, destination unknown
     Assert.assertEquals(20, this.instructionFetchBlock.getPc());
     Assert.assertEquals("jal", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("addi", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     // Decode has the first 2 fetched (nop is filtered)
     Assert.assertEquals("beq x5,x0,labelIf", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x1,x2", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
     
     this.cpu.step();
     // So nothing is fetched
@@ -1305,10 +1298,10 @@ public class ForwardSimulationTest
     // Decode has just the jal, the addi was discarded
     Assert.assertEquals(1, this.decodeAndDispatchBlock.getCodeBuffer().size());
     Assert.assertEquals("jal tg1,labelFin", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    // beq and subi moved to their respective issue windows
+    // beq and mul moved to their respective issue windows
     Assert.assertEquals("beq x5,x0,labelIf",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x1,x2", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     
     this.cpu.step();
     // Last fetch was empty, so now decode is empty
@@ -1316,27 +1309,27 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,labelFin",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("beq x5,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x1,x2", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x5,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x1,x2", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x5,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     
     this.cpu.step();
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertNull(this.branchFunctionUnitBlock1.getSimCodeModel());
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     // First instruction ready to be committed
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     
     this.cpu.step();
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     Assert.assertNull(this.branchFunctionUnitBlock1.getSimCodeModel());
     Assert.assertNull(this.branchFunctionUnitBlock2.getSimCodeModel());
     Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
@@ -1346,23 +1339,23 @@ public class ForwardSimulationTest
     
     this.cpu.step();
     Assert.assertEquals(1, this.decodeAndDispatchBlock.getCodeBuffer().size());
-    Assert.assertEquals("addi tg2,x1,10", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
+    Assert.assertEquals("addi tg0,x1,10", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("addi tg2,x1,10", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("addi tg0,x1,10", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("addi tg2,x1,10", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("addi tg0,x1,10", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals("addi tg2,x1,10", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("addi tg0,x1,10", this.addFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(21).isReadyToBeCommitted());
     
     this.cpu.step();
     Assert.assertEquals(10, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt), 0.01);
-    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValueAsInt());
+    Assert.assertEquals(1, this.globalHistoryRegister.getRegisterValue());
   }
   
   
@@ -1373,22 +1366,22 @@ public class ForwardSimulationTest
   @Test
   public void simulate_ifElse_executeElseFragment()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   beq x3, x0, labelIf
-                                  subi x1, x1, 10
+                                  mul x1, x3, x3
                                   jal x0, labelFin
                                  labelIf:
                                   addi x1, x1, 10
                                  labelFin:
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     
     this.cpu.step();
     // 3 fetches, but it stops before second branch (fetch limitation)
     Assert.assertEquals("beq", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals("subi", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
+    Assert.assertEquals("mul", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     
     
@@ -1399,7 +1392,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("addi", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals("beq x3,x0,labelIf", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -1407,7 +1400,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,labelFin", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,labelIf",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     
     this.cpu.step();
     // The addi does not get out of the decode buffer, because the jal is computed and followed
@@ -1416,42 +1409,43 @@ public class ForwardSimulationTest
     Assert.assertEquals("jal tg1,labelFin",
                         this.branchIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     Assert.assertNull(this.branchFunctionUnitBlock2.getSimCodeModel());
     
     this.cpu.step();
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x1,10", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertEquals("beq x3,x0,labelIf", this.branchFunctionUnitBlock1.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     
     this.cpu.step();
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     Assert.assertNull(this.branchFunctionUnitBlock1.getSimCodeModel());
     Assert.assertEquals("jal tg1,labelFin", this.branchFunctionUnitBlock2.getSimCodeModel().getRenamedCodeLine());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
     
     this.cpu.step();
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(3).isReadyToBeCommitted());
-    Assert.assertEquals(-10, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt));
+    Assert.assertEquals(36, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt));
     
     this.cpu.step();
-    Assert.assertEquals(1, this.globalHistoryRegister.getRegisterValueAsInt());
+    // No conditional has been predicted
+    Assert.assertEquals(0, this.globalHistoryRegister.getRegisterValue());
   }
   
   @Test
   public void simulate_oneStore_savesIntInMemory()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                   sw x3,0(x2)
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     
     this.cpu.step();
     Assert.assertEquals("sw", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -1488,7 +1482,6 @@ public class ForwardSimulationTest
     Assert.assertEquals(25, this.storeBufferBlock.getStoreBufferItem(0).getAddress());
     Assert.assertTrue(this.storeBufferBlock.getStoreBufferItem(0).isSourceReady());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
-    this.cpu.step();
     // The store delay is 1, MAU delay is 1, so after two clocks...
     this.cpu.step();
     this.cpu.step();
@@ -1503,12 +1496,12 @@ public class ForwardSimulationTest
   @Test
   public void simulate_oneLoad_loadsIntInMemory()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
                                  lw x1,0(x2)
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     
     this.cpu.step();
     Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
@@ -1548,7 +1541,6 @@ public class ForwardSimulationTest
     
     this.cpu.step();
     this.cpu.step();
-    this.cpu.step();
     
     Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
     Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
@@ -1565,19 +1557,19 @@ public class ForwardSimulationTest
   @Test
   public void simulate_loadBypassing_successfullyLoadsFromStoreBuffer()
   {
-    CodeParser codeParser = new CodeParser(initLoader);
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
-                                 subi x4,x4,5
+                                 mul x4,x4,x4
                                  sw x3,0(x2)
                                  lw x1,0(x2)
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     // The store will execute first, load will take the value from the store buffer
     // Load will not touch memory.
     
     this.cpu.step();
-    Assert.assertEquals("subi", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
+    Assert.assertEquals("mul", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("sw", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals(0, this.loadBufferBlock.getQueueSize());
@@ -1586,7 +1578,7 @@ public class ForwardSimulationTest
     this.cpu.step();
     Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals(3, this.decodeAndDispatchBlock.getCodeBuffer().size());
-    Assert.assertEquals("subi tg0,x4,5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x4", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     Assert.assertEquals("sw x3,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
     Assert.assertEquals("lw tg1,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(2).getRenamedCodeLine());
     
@@ -1601,7 +1593,7 @@ public class ForwardSimulationTest
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
     Assert.assertEquals("sw x3,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
     Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x4,5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x4", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
@@ -1611,7 +1603,7 @@ public class ForwardSimulationTest
     Assert.assertEquals("lw tg1,0(x2)",
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("sw x3,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x4,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x4", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
@@ -1622,13 +1614,13 @@ public class ForwardSimulationTest
     Assert.assertTrue(this.storeBufferBlock.getStoreBufferItem(1).isSourceReady());
     Assert.assertEquals(25, this.storeBufferBlock.getStoreBufferItem(1).getAddress());
     Assert.assertFalse(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
-    Assert.assertEquals("subi tg0,x4,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x4,x4", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     // Store moved to MAU (as it is about to commit)
     Assert.assertEquals("sw x3,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals("sw x3,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
     Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
     Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
@@ -1636,7 +1628,6 @@ public class ForwardSimulationTest
     Assert.assertTrue(this.loadBufferBlock.getLoadBufferItem(2).isDestinationReady());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(2).isReadyToBeCommitted());
     
-    this.cpu.step();
     Assert.assertEquals("sw x3,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
     this.cpu.step();
     // store and load in rob
@@ -1652,155 +1643,25 @@ public class ForwardSimulationTest
   }
   
   @Test
-  public void simulate_loadForwarding_FailsAndRerunsFromLoad()
-  {
-    // Code:
-    // subi x3 x3 5
-    // sw x3 x2 0 - store 6 to address x2 (25)
-    // lw x1 x2 0 - load from address x2
-    CodeParser codeParser = new CodeParser(initLoader);
-    codeParser.parseCode("""
-                                 subi x3, x3, 5
-                                 sw x3, 0(x2)
-                                 lw x1, 0(x2)
-                                 """);
-    instructionMemoryBlock.setCode(codeParser.getInstructions());
-    
-    this.cpu.step();
-    // Fetch all three instructions
-    Assert.assertEquals("subi", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals("sw", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
-    Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
-    Assert.assertEquals(0, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
-    
-    this.cpu.step();
-    Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals(3, this.decodeAndDispatchBlock.getCodeBuffer().size());
-    Assert.assertEquals("subi tg0,x3,5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
-    Assert.assertEquals("lw tg1,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(2).getRenamedCodeLine());
-    
-    this.cpu.step();
-    // both load and store got issued and are in LB and SB
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    Assert.assertEquals(0, this.decodeAndDispatchBlock.getCodeBuffer().size());
-    // Both are in l/s issue, only load has both sources ready. Only address is computed here, but as of now, both operands are needed.
-    Assert.assertEquals("sw tg0,0(x2)",
-                        this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("lw tg1,0(x2)",
-                        this.loadStoreIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    
-    this.cpu.step();
-    // Load got to EX
-    Assert.assertEquals("lw tg1,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
-    // Store stays in issue window
-    Assert.assertEquals("sw tg0,0(x2)",
-                        this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    
-    this.cpu.step();
-    // Load address is done computing. The store is not ready to be computed, subi is not done!
-    Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
-    Assert.assertEquals("subi tg0,x3,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    // Load got to mem access. Cache line must be loaded (1 clock), cache will respond in 2 clocks total
-    Assert.assertEquals("lw tg1,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("sw tg0,0(x2)",
-                        this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
-    
-    this.cpu.step();
-    // subi is done (leaves ROB), store can be computed
-    Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
-    Assert.assertEquals("sw tg0,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
-    this.cpu.step();
-    // Store address done, can be written to cache
-    Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
-    this.cpu.step();
-    // Mem load should be done, load should be ready to be committed
-    Assert.assertTrue(this.reorderBufferBlock.getRobItem(2).isReadyToBeCommitted());
-    Assert.assertEquals("sw tg0,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    // Load is in load buffer
-    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
-    
-    this.cpu.step();
-    Assert.assertEquals("sw tg0,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    this.cpu.step();
-    // store ready
-    Assert.assertTrue(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
-    
-    this.cpu.step();
-    // Store committed, load got destroyed because of bad speculation
-    Assert.assertEquals(0, this.reorderBufferBlock.getReorderQueueSize());
-    Assert.assertEquals(0, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
-    // Flush, fetch from the bad load
-    Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
-    
-    this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    this.cpu.step();
-    Assert.assertEquals(1, this.reorderBufferBlock.getReorderQueueSize());
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("lw tg2,0(x2)",
-                        this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("lw tg2,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    
-    this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertEquals("lw tg2,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    
-    this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    
-    this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    this.cpu.step();
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    Assert.assertTrue(this.reorderBufferBlock.getRobItem(30).isReadyToBeCommitted());
-    Assert.assertEquals("lw tg2,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    
-    this.cpu.step();
-    Assert.assertEquals(1, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt));
-    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-  }
-  
-  @Test
   public void simulate_loadForwarding_FailsDuringMA()
   {
     // Program:
     //
-    // subi x3 x3 5 # x3: 6 -> 1
+    // mul x3 x3 x3 # x3: 6 -> 36
     // sw x3 x2 0   # x3 (1) is stored to memory [25+0]
-    // lw x1 x2 0   # x1: 0 -> 1
-    CodeParser codeParser = new CodeParser(initLoader);
+    // lw x1 x2 0   # x1: 0 -> 36
+    CodeParser codeParser = new CodeParser(staticDataProvider);
     codeParser.parseCode("""
-                                  subi x3, x3, 5
+                                  mul x3, x3, x3
                                   sw x3, 0(x2)
                                   lw x1, 0(x2)
                                  """);
     instructionMemoryBlock.setCode(codeParser.getInstructions());
-    instructionMemoryBlock.setLabels(codeParser.getLabels());
+    instructionMemoryBlock.setLabels(codeParser.getSymbolTable());
     // Load will be ready to execute first. It will go to MAU, because the store address will not be computed yet.
     // Store will finish later. The load will be flushed and re-executed.
     
+    // Watch out! MAU setBaseDelay no longer does anything
     this.memoryAccessUnit.setDelay(3);
     this.memoryAccessUnit.setBaseDelay(3);
     
@@ -1809,86 +1670,77 @@ public class ForwardSimulationTest
     Assert.assertEquals(6, (int) this.unifiedRegisterFileBlock.getRegister("x3").getValue(DataTypeEnum.kInt), 0.01);
     
     this.cpu.step();
-    Assert.assertEquals("subi", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
+    Assert.assertEquals("mul", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals("sw", this.instructionFetchBlock.getFetchedCode().get(1).getInstructionName());
     Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(2).getInstructionName());
     Assert.assertEquals(0, this.loadBufferBlock.getQueueSize());
     Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
     
     this.cpu.step();
-    Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals(3, this.decodeAndDispatchBlock.getCodeBuffer().size());
-    Assert.assertEquals("subi tg0,x3,5", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(1).getRenamedCodeLine());
-    Assert.assertEquals("lw tg1,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(2).getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("nop", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     Assert.assertEquals(0, this.decodeAndDispatchBlock.getCodeBuffer().size());
+    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
+    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
+    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
+    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
     Assert.assertEquals("sw tg0,0(x2)",
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     Assert.assertEquals("lw tg1,0(x2)",
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(1).getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.aluIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
+    // compute load address
     Assert.assertEquals("lw tg1,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
+    // store waits for free FU
     Assert.assertEquals("sw tg0,0(x2)",
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    Assert.assertEquals(1, this.loadBufferBlock.getQueueSize());
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("lw tg1,0(x2)", this.loadBufferBlock.getLoadQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
+    // load has address, goes to MAU (no forwarding, because store is not ready)
     Assert.assertEquals("lw tg1,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
+    // store address is computed
     Assert.assertEquals("sw tg0,0(x2)",
                         this.loadStoreIssueWindowBlock.getIssuedInstructions().get(0).getRenamedCodeLine());
-    Assert.assertEquals("subi tg0,x3,5", this.subFunctionBlock.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("mul tg0,x3,x3", this.mulFunctionBlock.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
-    // Sub is ready
-    Assert.assertNull(this.subFunctionBlock.getSimCodeModel());
+    // mul is ready
+    Assert.assertNull(this.mulFunctionBlock.getSimCodeModel());
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(0).isReadyToBeCommitted());
-    // Store can start computing address
+    // clock 2 (final) of MA
     Assert.assertEquals("lw tg1,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
+    // Store can start computing address
     Assert.assertEquals("sw tg0,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
     
     
     this.cpu.step();
-    Assert.assertEquals("lw tg1,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
-    // Conflict detected (bad load), throw it out, fetch again (fetch stops being stalled)
-    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
-    Assert.assertEquals("sw tg0,0(x2)", this.storeBufferBlock.getStoreQueueFirst().getRenamedCodeLine());
-    Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
-    //Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
-    
-    this.cpu.step();
-    // Load memory access done, now for the store. It should be in cache so 1+1 clocks
+    // Load is finished computing, sits in ROB
     Assert.assertTrue(this.reorderBufferBlock.getRobItem(2).isReadyToBeCommitted());
+    // MA free, so sw starts. It should be in cache so 1 clock
     Assert.assertEquals("sw tg0,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
+    Assert.assertEquals(1, this.storeBufferBlock.getQueueSize());
+    Assert.assertEquals(2, this.reorderBufferBlock.getReorderQueueSize());
+    // Conflict detected (bad load), throw it out, fetch again (fetch stops being stalled)
     
     this.cpu.step();
-    Assert.assertFalse(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
-    this.cpu.step();
-    Assert.assertTrue(this.reorderBufferBlock.getRobItem(1).isReadyToBeCommitted());
+    // Load memory access done, now for the store. It should be in cache so 1 clock
+    Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
     
     this.cpu.step();
-    // Store got committed, load got flushed
+    // Store is committed
+    Assert.assertEquals(2, this.simulationStatistics.committedInstructions);
+    // but while commiting, it becomes apparent that the load was bad speculation
+    Assert.assertTrue(this.reorderBufferBlock.reorderQueue.isEmpty());
+    // immediately fetch again
     Assert.assertEquals("lw", this.instructionFetchBlock.getFetchedCode().get(0).getInstructionName());
     
     this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
+    Assert.assertEquals("lw tg1,0(x2)", this.decodeAndDispatchBlock.getCodeBuffer().get(0).getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertEquals(1, this.reorderBufferBlock.getReorderQueueSize());
@@ -1896,15 +1748,13 @@ public class ForwardSimulationTest
     Assert.assertEquals(0, this.storeBufferBlock.getQueueSize());
     
     this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
+    Assert.assertEquals("lw tg1,0(x2)", this.loadStoreFunctionUnit.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     // Now to mem access. should be in cache.
     Assert.assertNull(this.loadStoreFunctionUnit.getSimCodeModel());
-    Assert.assertEquals("lw tg2,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
-    
-    this.cpu.step();
-    Assert.assertEquals("lw tg2,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
+    // in cache
+    Assert.assertEquals("lw tg1,0(x2)", this.memoryAccessUnit.getSimCodeModel().getRenamedCodeLine());
     
     this.cpu.step();
     Assert.assertNull(this.memoryAccessUnit.getSimCodeModel());
@@ -1914,6 +1764,6 @@ public class ForwardSimulationTest
     this.cpu.step();
     
     
-    Assert.assertEquals(1, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt));
+    Assert.assertEquals(36, (int) this.unifiedRegisterFileBlock.getRegister("x1").getValue(DataTypeEnum.kInt));
   }
 }
