@@ -9,11 +9,10 @@ import com.gradle.superscalarsim.enums.DataTypeEnum;
 import com.gradle.superscalarsim.enums.RegisterReadinessEnum;
 import com.gradle.superscalarsim.enums.RegisterTypeEnum;
 import com.gradle.superscalarsim.factories.RegisterModelFactory;
-import com.gradle.superscalarsim.loader.InitLoader;
-import com.gradle.superscalarsim.models.instruction.InputCodeArgument;
-import com.gradle.superscalarsim.models.instruction.InputCodeModel;
-import com.gradle.superscalarsim.models.instruction.InstructionFunctionModel;
-import com.gradle.superscalarsim.models.instruction.SimCodeModel;
+import com.gradle.superscalarsim.loader.DynamicDataProvider;
+import com.gradle.superscalarsim.loader.IDataProvider;
+import com.gradle.superscalarsim.models.instruction.*;
+import com.gradle.superscalarsim.models.register.RegisterFile;
 import com.gradle.superscalarsim.models.register.RegisterFileModel;
 import com.gradle.superscalarsim.models.register.RegisterModel;
 import com.gradle.superscalarsim.models.util.Result;
@@ -29,7 +28,7 @@ import java.util.Map;
 public class CodeArithmeticInterpreterIntTest
 {
   UnifiedRegisterFileBlock urf;
-  private InitLoader initLoader;
+  private IDataProvider staticDataProvider;
   private CodeArithmeticInterpreter codeArithmeticInterpreter;
   
   @Before
@@ -43,9 +42,10 @@ public class CodeArithmeticInterpreterIntTest
             .hasRegisterList(Arrays.asList(integer1, integer2, integer3, integer4)).build();
     
     
-    initLoader = new InitLoader(Collections.singletonList(integerFile), null);
-    initLoader.setInstructionFunctionModels(setUpInstructions());
-    urf = new UnifiedRegisterFileBlock(initLoader, 320, new RegisterModelFactory());
+    RegisterFile registerFile = new RegisterFile(Collections.singletonList(integerFile), List.of());
+    staticDataProvider = new DynamicDataProvider(registerFile, setUpInstructions());
+    urf                = new UnifiedRegisterFileBlock(staticDataProvider.getRegisterFile().getRegisterMap(true), 320,
+                                                      new RegisterModelFactory());
     
     this.codeArithmeticInterpreter = new CodeArithmeticInterpreter();
   }
@@ -55,114 +55,114 @@ public class CodeArithmeticInterpreterIntTest
     InstructionFunctionModel instructionAdd = new InstructionFunctionModelBuilder().hasName("add")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 + \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionSub = new InstructionFunctionModelBuilder().hasName("sub")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 - \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionMul = new InstructionFunctionModelBuilder().hasName("mul")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 * \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionIntDiv = new InstructionFunctionModelBuilder().hasName("div")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 / \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionShiftLeft = new InstructionFunctionModelBuilder().hasName("shiftLeft")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 << \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionShiftRight = new InstructionFunctionModelBuilder().hasName("shiftRight")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 >> \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionLogShiftRight = new InstructionFunctionModelBuilder().hasName("shiftRightLog")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 >>> \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionMulAdd = new InstructionFunctionModelBuilder().hasName("mulAdd")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 + \\rs1 * \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionAddMul = new InstructionFunctionModelBuilder().hasName("addMul")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 * \\rs1 + \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionAnd = new InstructionFunctionModelBuilder().hasName("and")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 & \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionOr = new InstructionFunctionModelBuilder().hasName("or")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 | \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionCmpLt = new InstructionFunctionModelBuilder().hasName("cmpLt")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 < \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionCmpLe = new InstructionFunctionModelBuilder().hasName("cmpLe")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 <= \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionCmpEq = new InstructionFunctionModelBuilder().hasName("cmpEq")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 == \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionCmpGt = new InstructionFunctionModelBuilder().hasName("cmpGt")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 > \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     InstructionFunctionModel instructionCmpGe = new InstructionFunctionModelBuilder().hasName("cmpGe")
             .hasInputDataType(DataTypeEnum.kInt).hasOutputDataType(DataTypeEnum.kInt)
             .isInterpretedAs("\\rs1 \\rs2 >= \\rd =").hasArguments(
-                    List.of(new InstructionFunctionModel.Argument("rd", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs1", DataTypeEnum.kInt, null),
-                            new InstructionFunctionModel.Argument("rs2", DataTypeEnum.kInt, null))).build();
+                    List.of(new InstructionArgument("rd", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs1", DataTypeEnum.kInt, null),
+                            new InstructionArgument("rs2", DataTypeEnum.kInt, null))).build();
     
     return Map.ofEntries(Map.entry("add", instructionAdd), Map.entry("sub", instructionSub),
                          Map.entry("mul", instructionMul), Map.entry("div", instructionIntDiv),
@@ -180,7 +180,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("add")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("add")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -194,7 +194,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("sub")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("sub")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -208,7 +208,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("mul")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("mul")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -222,7 +222,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("div")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("div")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -237,8 +237,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasConstant("2", DataTypeEnum.kInt)
             .build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("shiftLeft")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("shiftLeft").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     // TODO: Fails because rs2 is set to immediate value
@@ -253,8 +253,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasConstant("2", DataTypeEnum.kInt)
             .build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("shiftRight")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("shiftRight").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -268,8 +268,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x4").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasConstant("1", DataTypeEnum.kInt)
             .build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("shiftRight")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("shiftRight").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -283,7 +283,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x4").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasConstant("1", DataTypeEnum.kInt)
             .build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader)
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
             .hasInstructionName("shiftRightLog").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -297,8 +297,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("mulAdd")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("mulAdd").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -311,8 +311,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("addMul")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("addMul").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -325,7 +325,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x4").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("and")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("and")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -339,7 +339,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("or")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("or")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
@@ -353,8 +353,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -367,8 +367,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -381,8 +381,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -395,8 +395,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -409,8 +409,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -423,8 +423,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpLe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpLe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -437,8 +437,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpEq")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpEq").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -451,8 +451,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpEq")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpEq").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -465,8 +465,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpEq")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpEq").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -479,8 +479,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -493,8 +493,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -507,8 +507,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGe")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGe").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -521,8 +521,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x3").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -535,8 +535,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x2").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -549,8 +549,8 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x3").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("cmpGt")
-            .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider)
+            .hasInstructionName("cmpGt").hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
     Expression.Variable v = this.codeArithmeticInterpreter.interpretInstruction(codeModel).value();
@@ -563,7 +563,7 @@ public class CodeArithmeticInterpreterIntTest
     InputCodeArgument argument1 = new InputCodeArgumentBuilder(urf).hasName("rd").hasRegister("x1").build();
     InputCodeArgument argument2 = new InputCodeArgumentBuilder(urf).hasName("rs1").hasRegister("x2").build();
     InputCodeArgument argument3 = new InputCodeArgumentBuilder(urf).hasName("rs2").hasRegister("x1").build();
-    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(initLoader).hasInstructionName("div")
+    InputCodeModel inputCodeModel = new InputCodeModelBuilder().hasLoader(staticDataProvider).hasInstructionName("div")
             .hasArguments(Arrays.asList(argument1, argument2, argument3)).build();
     SimCodeModel codeModel = new SimCodeModel(inputCodeModel, 0, 0);
     
